# CraftStore

./: Dockerfile  README.md  docker-compose.yml
craftstore/: manage.py  pyproject.toml
craftstore/cdn/: admin.py  models.py  urls.py  utils.py  views.py
craftstore/cdn/migrations/: 0001_initial.py  0002_alter_image_slug.py  0003_alter_image_author.py
craftstore/craftstore/: asgi.py  settings.py  urls.py  wsgi.py
craftstore/craftstore/config/: corsheaders.py
craftstore/files/: lr9_MMDO_22_23 (2).docx
craftstore/main/: views.py
craftstore/messenger/: admin.py  consumers.py  models.py  routing.py  urls.py  utils.py  views.py
craftstore/messenger/migrations/: 0001_initial.py  0002_alter_chat_slug.py  0003_alter_chat_slug.py  0004_alter_chat_slug.py  0005_alter_chat_slug.py  0006_alter_chat_slug.py  0007_alter_chat_slug.py  0008_alter_chat_slug.py  0009_alter_chat_slug.py  0010_alter_chat_slug.py  0011_alter_chat_slug.py  0012_alter_chat_slug.py  0013_alter_chat_slug.py  0014_alter_chat_slug_alter_massage_sender.py  0015_alter_chat_slug.py  0016_alter_chat_slug.py  0017_alter_chat_slug.py  0018_alter_chat_slug.py  0019_alter_chat_slug.py  0020_remove_chat_masseges_alter_chat_slug_message_and_more.py  0021_message_images_alter_message_message.py
craftstore/modules/: config.py  datetimeutils.py  enycryptor.py  files.py  filters.py  serializers.py
craftstore/sandbox/: urls.py  views.py
craftstore/store/: admin.py  models.py  urls.py  views.py
craftstore/templates/: saandbox.html
craftstore/user/: admin.py  models.py  urls.py  utils.py  views.py
(+52 files in other folders)
